[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpo_rl"
version = "0.1.0"
authors = [
    { name = "Coolercool47" },
]
description = "Hyperparameter Optimization using Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "gymnasium>=0.26.0",
    "stable-baselines3>=1.5.0",
    "sb3-contrib>=1.5.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "mypy>=0.910",
    "black>=21.5b2",
    "flake8>=3.9.0",
]

[tool.setuptools]
packages = ["hpo_rl"]